# lab-pa-1

./: CMakeLists.txt  build-with-limit.sh
include/: sort.h  standard.h  streams.h
include/file/: input.h  io.h  manager.h  output.h
include/io/: buffered_writer.h  fast_writer.h  manager.h  reader.h  writer.h
include/solution/: ai.h  common.h  modified.h  standard.h
src/: generator.cpp  main.cpp  sort.cpp  streams.cpp
src/file/: input.cpp  io.cpp  manager.cpp  output.cpp
src/io/: manager.cpp  reader.cpp  writer.cpp
src/solutions/: ai.cpp  modified.cpp  standard.cpp
test/: ExternalSortTest.cpp  ExternalSortTest.h
